Fixed syntax errors (changed ; to : where appropriate after case)

--- a/Avengers_guessing_game.html
+++ b/Avengers_guessing_game.html
@@ -25,16 +25,16 @@ while (avenger===false) {
 	  case ("hulk"):
 	  case ("bruce"):
 	  case ("banner"):
-	  case ("bruce banner");
-	  case ("doctor banner");
-	  case ("dr banner");
-	  case ("dr. banner");
+	  case ("bruce banner"):
+	  case ("doctor banner"):
+	  case ("dr banner"):
+	  case ("dr. banner"):
 		message = ("He's pretty awesome, but not my favorite.");
 		break;
 	  case ("black widow"):
 	  case ("natasha"):
 	  case ("romanoff"):
-	  case ("agent romanoff");
+	  case ("agent romanoff"):
 		message = ("She's probably second best, but not my favorite.");
 		break;
 	  case ("hawkeye"):
