--- a/Avengers_guessing_game.html
+++ b/Avengers_guessing_game.html
@@ -1,66 +1,82 @@
 <script>
+function Game (tries, gameOn, guess, message){
+	this.tries = tries;
+	this.gameOn = gameOn;
+	this.guess = guess;
+	this.message = message;
+	this.attempt = function() {
+		while (gameOn) {
+		guess = prompt("I have a favorite Avenger. Can you guess who it less than five tries? You have " + (5-tries) + " tries remaining.").toLowerCase();
+		switch (guess) {
 
-	function Game (tries, gameOn, guess, message){
-		this.tries = tries;
-		this.gameOn = gameOn;
-		this.guess = guess;
-		this.message = message;
-		this.attempt = function() {
-			while (gameOn) {
-			    guess = prompt("I have a favorite Avenger. Can you guess who it is?").toLowerCase();
-			    switch (guess) {
-				  case ("iron man"):
-				  case ("tony"):
-				  case ("stark"):
-				  case ("tony stark"):
-				  case ("ironman"):
-					gameOn = false;
-					message = ("Yeah, I'm a nutter for Tony Stark.");
-					break;
-				  case ("captain america"):
-				  case ("cap"):
-				  case ("steve"):
-				  case ("steve rogers"):
-					message = ("That guy drives me crazy. No.");
-					break;
-				  case ("the hulk"):
-				  case ("hulk"):
-				  case ("bruce"):
-				  case ("banner"):
-				  case ("bruce banner"):
-				  case ("doctor banner"):
-				  case ("dr banner"):
-				  case ("dr. banner"):
-					message = ("He's pretty awesome, but not my favorite.");
-					break;
-				  case ("black widow"):
-				  case ("natasha"):
-				  case ("romanoff"):
-				  case ("agent romanoff"):
-					message = ("She's probably second best, but not my favorite.");
-					break;
-				  case ("hawkeye"):
-				  case ("clint"):
-				  case ("barton"):
-				  case ("clint barton"):
-					message = ("They never did enough with his character... Nope. Wasted potential.");
-					break;
-				  case ("thor"):
-				  case ("god of thunder"):
-					message = ("Nah... he's too high, mighty and haughty for me.");
-					break;
-				  default:
-					message = ("Are we talking about the same thing? I mean just the Avengers from the first movie");
-				};
-				tries++;
-			  alert(message);
-			  if (tries > 4) {
-			  	alert("That's all the time we have for this today. The answer was Iron Man.");
-			  	gameOn = false;
-			  }
+			case ("iron man"):
+			case ("tony"):
+			case ("stark"):
+			case ("tony stark"):
+			case ("ironman"):
+			gameOn = false;
+			message = ("Yeah, I'm a nutter for Tony Stark.");
+			break;
+
+			case ("captain america"):
+			case ("cap"):
+			case ("steve"):
+			case ("steve rogers"):
+			message = ("That guy drives me crazy. No.");
+			break;
+
+			case ("the hulk"):
+			case ("hulk"):
+			case ("bruce"):
+			case ("banner"):
+			case ("bruce banner"):
+			case ("doctor banner"):
+			case ("dr banner"):
+			case ("dr. banner"):
+			message = ("He's pretty awesome, but not my favorite.");
+			break;
+
+			case ("black widow"):
+			case ("natasha"):
+			case ("romanoff"):
+			case ("agent romanoff"):
+			message = ("She's probably second best, but not my favorite.");
+			break;
+
+			case ("hawkeye"):
+			case ("clint"):
+			case ("barton"):
+			case ("clint barton"):
+			message = ("They never did enough with his character... Nope. Wasted potential.");
+			break;
+
+			case ("thor"):
+			message = ("Nah... he's too high, mighty and haughty for me.");
+			break;
+
+			default:
+			message = ("Are we talking about the same thing? I mean just the Avengers from the first movie");
 			};
+		tries++;
+		alert(message);
+
+		if (tries > 4) {
+		alert("That's all the time we have for this today. The answer was Iron Man.");
+		gameOn = false;
+		alert("Thanks for playing. Better luck next time.");
 		}
+  	}
+  	if (tries === 1) {
+  		alert("You got it on your first try!");
+  	} else if (tries <= 4) {
+  		alert("You got it in " + tries + " tries.");
+  	}
+  	if (tries <=4) {
+  		alert("You win. Thanks for playing.");
+  	}
+  }
 }
-	var lyle = new Game(0,true);
-	lyle.attempt();
+
+	var play = new Game(0,true);
+	play.attempt();
 </script>
