Post version submitted for grade, now just for experimentation.

--- a/Avengers_guessing_game.html
+++ b/Avengers_guessing_game.html
@@ -13,13 +13,22 @@
 		<h2 id="endGame"> </h2>
 		<h2 id="endGame2"> </2>
 		
-		<p><a href="https://en.wikipedia.org/wiki/Iron_Man"><img src="images/ironman.png"></a></p>
-		<p><a href="https://en.wikipedia.org/wiki/Black_Widow_(Natalia_Romanova)"><img src="images/blackwidow.jpg"></a></p>
-		<p><a href="https://en.wikipedia.org/wiki/Captain_America"><img src="images/captainamerica.jpg"></a></p>
+		<div id="ironMan">
+			<p><a href="https://en.wikipedia.org/wiki/Iron_Man"><img src="images/ironman.png"></a></p>
+		</div>
+
+		<div id="blackWidow">
+			<p><a href="https://en.wikipedia.org/wiki/Black_Widow_(Natalia_Romanova)"><img src="images/blackwidow.jpg"></a></p>
+		</div>
+
+		<div id="captainAmerica">
+			<p><a href="https://en.wikipedia.org/wiki/Captain_America"><img src="images/captainamerica.jpg"></a></p>
+		</div>
+		
 		<p><a href="https://en.wikipedia.org/wiki/Hulk_(comics)"><img src="images/hulk.jpg"></a></p>
 		<p><a href="https://en.wikipedia.org/wiki/Hawkeye_(comics)"><img src="images/hawkeye.jpg"></a></p>
 		<p><a href="https://en.wikipedia.org/wiki/Thor_(Marvel_Comics)"><img src="images/thor.jpg"></a></p>
-		
+
 		<h3>Game instructions:</h3>
 		<p>This is a simple game that's mostly self explanatory. You'll have to try to guess which one of the Avengers is my favorite. If you guess correctly, you will receive a wonderful infusion of the special, empty kind of satisfaction that one receives upon the correct yet arbitrary completion of a task that does not demonstrate unusual talent or skill in any particular personal aptitude. Kudos to you!</p>
 
